force-app/main/default/objects/Account/fields/Compliance_Test__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Test__c</fullName>
    <label>Compliance Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>