force-app/main/default/objects/Account/fields/Favorite_Golf_Course__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Golf_Course__c</fullName>
    <label>Favorite Golf Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>