force-app/main/default/objects/Account/fields/Lead_Time_Test__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Test__c</fullName>
    <label>Lead Time Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>